maven: use jpms for tests, add-opens for junit